# covcheck

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  covcheck-ci.yaml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.2/: 404.html  index.html  sitemap.xml
covcheck/: __init__.py
covcheck/_cli/: config.py  main.py  utilities.py  validate.py
covcheck/_parsing/: coverage_node.py  coverage_node_type.py  coverage_result.py  coverage_summary.py  coverage_xml_parser.py
docs/: index.md
tests/: conftest.py
tests/coverage_xml/: coverage.xml  invalid-coverage.xml
tests/test_cli/: test_config.py  test_main.py  test_utiliites.py
tests/test_parsing/: test_coverage_node.py  test_coverage_node_type.py  test_coverage_result.py  test_coverage_summary.py  test_coverage_xml_parser.py
tests/utilities/: process_utilities.py
